<resources>
    <string name="app_name">firstApp</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_info">Create your personal profile.com and follow.</string>
    <string name="phone_number">Phone Number</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="city">City</string>
    <string name="terms_title">By signing up, you agree to the </string>
    <string name="terms_details">Terms of </string>
    <string name="terms_details_two">Service and Privacy Policy</string>
    <string name="login_text_title">Already have an account?</string>
    <string name="sign_up_text_title">Don’t have an account yet?</string>
    <string name="login_text">Login</string>
    <string name="enter_personal_perfoile"> Enter to your personal profile.com and follow. </string>
    <string name="login_text_underline"> <u>Login</u>.</string>
    <string name="sign_up_text_underline"> <u>Sign Up</u>.</string>
    <string name="comming_soon_text"> Comming Soon.</string>
    <string name="Refresh_text"> Refresh </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_cities">Popular Cities</string>
    <string name="city_des">Aspen is as close as one can get to a storybook alpine town in America. The choose-your-own-adventure possibilities—skiing, hiking, dining shopping and Aspen is as close as one can get to a storybook alpine town in America. The choose-your-own-adventure possibilities—skiing, hiking,</string>

</resources>