<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpScreen">

    <ImageView
        android:id="@+id/image_view_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_27dp"
        android:layout_marginTop="@dimen/space_47dp"
        android:src="@drawable/arrow_left"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/image_view_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_task"
        app:layout_constraintBottom_toBottomOf="@+id/image_view_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_view_back"
        app:layout_constraintTop_toTopOf="@+id/image_view_back" />

    <TextView
        android:id="@+id/text_view_sign_up"
        style="@style/text_view_headline_style"
        android:layout_marginTop="@dimen/space_53dp"
        android:text="@string/sign_up"
        app:layout_constraintStart_toStartOf="@+id/image_view_back"
        app:layout_constraintTop_toBottomOf="@id/image_view_back" />

    <TextView
        android:id="@+id/text_view_sign_up_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7dp"
        android:text="@string/sign_up_info"
        android:textColor="@color/dark_20"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="@+id/text_view_sign_up"
        app:layout_constraintTop_toBottomOf="@id/text_view_sign_up" />

    <TextView
        android:id="@+id/text_view_phone"
        style="@style/text_view_title_style"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="@+id/text_view_sign_up_info"
        app:layout_constraintTop_toBottomOf="@id/text_view_sign_up_info" />

    <EditText
        android:id="@+id/edit_text_signup_phone"
        style="@style/edit_text_style"
        android:layout_marginHorizontal="@dimen/space_27dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_phone" />

    <TextView
        android:id="@+id/text_view_email"
        style="@style/text_view_title_style"
        android:text="@string/email"
        app:layout_constraintStart_toStartOf="@+id/edit_text_signup_phone"
        app:layout_constraintTop_toBottomOf="@id/edit_text_signup_phone" />

    <EditText
        android:id="@+id/edit_text_signup_email"
        style="@style/edit_text_style"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_signup_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_text_signup_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_view_email" />

    <TextView
        android:id="@+id/text_view_city"
        style="@style/text_view_title_style"
        android:text="@string/city"
        app:layout_constraintStart_toStartOf="@+id/text_view_email"
        app:layout_constraintTop_toBottomOf="@id/edit_text_signup_email" />

    <EditText
        android:id="@+id/edit_text_signup_city"
        style="@style/edit_text_style"
        android:hint="@string/city"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_signup_phone"
        app:layout_constraintStart_toStartOf="@+id/edit_text_signup_phone"
        app:layout_constraintTop_toBottomOf="@+id/text_view_city" />

    <TextView
        android:id="@+id/text_view_password"
        style="@style/text_view_title_style"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/text_view_city"
        app:layout_constraintTop_toBottomOf="@id/edit_text_signup_city" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_password_two"
        style="@style/text_input_style"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_signup_city"
        app:layout_constraintStart_toStartOf="@+id/edit_text_signup_city"
        app:layout_constraintTop_toBottomOf="@+id/text_view_password"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/Light_20">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_password"
            style="@style/edit_text_input_style"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/text_view_terms_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacexxLarge"
        android:layout_marginBottom="@dimen/space_normal"
        android:text="@string/terms_title"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="@id/check_box_terms"
        app:layout_constraintStart_toStartOf="@id/check_box_terms"
        app:layout_constraintTop_toTopOf="@+id/check_box_terms" />

    <TextView
        android:id="@+id/text_view_terms_details_one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_normal"
        android:text="@string/terms_details"
        android:textColor="@color/Dodger_Blue_color"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintBottom_toBottomOf="@id/check_box_terms"
        app:layout_constraintStart_toEndOf="@id/text_view_terms_title"
        app:layout_constraintTop_toTopOf="@+id/check_box_terms" />

    <TextView
        android:id="@+id/text_view_terms_details_two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_details_two"
        android:textColor="@color/Dodger_Blue_color"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="@id/text_view_terms_title"
        app:layout_constraintTop_toBottomOf="@id/text_view_terms_title" />

    <CheckBox
        android:id="@+id/check_box_terms"
        android:layout_width="@dimen/zero"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_17dp"
        app:layout_constraintEnd_toEndOf="@+id/text_input_layout_password_two"
        app:layout_constraintStart_toStartOf="@+id/text_view_password"
        app:layout_constraintTop_toBottomOf="@+id/text_input_layout_password_two" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_sign_up"
        style="@style/button_style"
        android:text="@string/sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/check_box_terms" />

    <TextView
        android:id="@+id/text_view_question_have_account"
        style="@style/text_question_account_style"
        android:layout_marginTop="@dimen/space_17dp"
        android:layout_marginBottom="@dimen/space_53dp"
        android:text="@string/login_text_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_sign_up" />

    <TextView
        android:id="@+id/text_view_login_account"
        style="@style/text_click_account_style"
        android:text="@string/login_text_underline"
        app:layout_constraintBottom_toBottomOf="@id/text_view_question_have_account"
        app:layout_constraintStart_toEndOf="@+id/text_view_question_have_account"
        app:layout_constraintTop_toTopOf="@id/text_view_question_have_account" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>