<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginScreen">

    <ImageView
        android:id="@+id/image_view_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_20dp"
        android:src="@drawable/logo_task"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_login_headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/space_27dp"
        android:layout_marginTop="@dimen/spacexxLarge"
        android:text="@string/login_text"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_view_login_logo" />

    <TextView
        android:id="@+id/text_view_login_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_7dp"
        android:text="@string/enter_personal_perfoile"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintStart_toStartOf="@id/text_view_login_headline"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_headline" />

    <TextView
        android:id="@+id/text_view_login_phone_num"
        style="@style/text_view_title_style"
        android:layout_marginStart="@dimen/space_27dp"
        android:text="@string/phone_number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_description" />

    <EditText
        android:id="@+id/edit_text_login_phone_num"
        style="@style/edit_text_style"
        android:layout_marginHorizontal="@dimen/space_27dp"
        android:hint="@string/phone_number"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_phone_num" />

    <TextView
        android:id="@+id/text_view_login_password"
        style="@style/text_view_title_style"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@id/text_view_login_phone_num"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_phone_num" />

    <EditText
        android:id="@+id/edit_text_login_password"
        style="@style/edit_text_style"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/edit_text_login_phone_num"
        app:layout_constraintStart_toStartOf="@id/edit_text_login_phone_num"
        app:layout_constraintTop_toBottomOf="@id/text_view_login_password" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_login"
        style="@style/button_style"
        android:text="@string/login_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_login_password" />

    <TextView
        android:id="@+id/text_view_question_have_account"
        style="@style/text_question_account_style"
        android:layout_marginBottom="53dp"
        android:text="@string/sign_up_text_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />

    <TextView
        android:id="@+id/text_view_sign_up_account"
        style="@style/text_click_account_style"
        android:text="@string/sign_up_text_underline"
        app:layout_constraintBottom_toBottomOf="@id/text_view_question_have_account"
        app:layout_constraintStart_toEndOf="@+id/text_view_question_have_account"
        app:layout_constraintTop_toTopOf="@id/text_view_question_have_account" />


</androidx.constraintlayout.widget.ConstraintLayout>